[gd_scene load_steps=54 format=2]

[ext_resource path="res://assets/assasin.png" type="Texture" id=1]
[ext_resource path="res://Personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/Areia01.png" type="Texture" id=3]
[ext_resource path="res://assets/teste.png" type="Texture" id=4]
[ext_resource path="res://assets/Casteloteste.png" type="Texture" id=5]
[ext_resource path="res://assets/Lava.png" type="Texture" id=6]
[ext_resource path="res://assets/star.png" type="Texture" id=7]
[ext_resource path="res://assets/witch.png" type="Texture" id=8]
[ext_resource path="res://assets/pumpkin.png" type="Texture" id=9]
[ext_resource path="res://assets/ghost.png" type="Texture" id=10]
[ext_resource path="res://assets/coracao.png" type="Texture" id=11]
[ext_resource path="res://assets/Board.png" type="Texture" id=12]
[ext_resource path="res://assets/archer.png" type="Texture" id=13]
[ext_resource path="res://assets/archer (1).png" type="Texture" id=14]
[ext_resource path="res://Main.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64.875, 57.625 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 52.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 57, 57 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 51.0447, 51.125 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 76, 76.375 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 21.5, 29 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 21, 29.25 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 23.5, 31.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 22.875, 31.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 23.75, 32 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 23.5, 33.25 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 27, 25.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 29.75, 29.25 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 31, 32.875 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 41, 40 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 30.875, 32.1875 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 28.5, 28 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 26.25, 28.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 23, 20 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 25.5, 21.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 21.625, 19.375 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 121, 65 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 29, 29.5 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 26, 23.375 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 22.75, 24.25 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 32.75, 32.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 32, 31.5 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 32, 31 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 32, 31.5 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 33.5, 31.5 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 33, 30.5 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 20.75, 20 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 21, 21.25 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 26.25, 26.25 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 33.5, 32 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 32.5, 32.5 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 33.25, 30.75 )

[sub_resource type="GDScript" id=41]
script/source = "extends Node2D

export(int) var minutos = 2
export(int) var segundos = 60

func _process(delta: float) -> void:
	
	if minutos > 0 and segundos == -1 :
		
		minutos -= 1
		segundos = 59
	
	if segundos >= 10:
		$Segundos.set_text(\":\" + str(segundos))
	else:
		$Segundos.set_text(\":0\" + str(segundos))
	
	if minutos >= 10:
		$Minutos.set_text(\":\" + str(minutos))
	else:
		$Minutos.set_text(\"0\" + str(minutos))
	
	if segundos == 60:
		$Segundos.set_text(\"00\")
	
	if minutos == 2 and segundos == 60:
		$Minutos.set_text(\"03\")
		$Segundos.set_text(\":00\")
	
	if segundos < 0:
		$Timer.stop()	
		$Segundos.set_text(\":00\")
		get_tree().paused = true
		get_tree().change_scene(\"res://GameOver.tscn\")
		
func _on_Timer_timeout() -> void:
	segundos -= 1
	

"

[node name="Main" type="Node2D"]
script = ExtResource( 15 )

[node name="Areia" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Areia"]
position = Vector2( 66, 541 )
scale = Vector2( 0.102905, 0.347197 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Areia"]
polygon = PoolVector2Array( -2, 0, 0, 1020, 125, 1019, 124, 1019, 1, 1019, -1, 1, 126, 0 )

[node name="Arqueiro01" type="Sprite" parent="Areia"]
position = Vector2( 47, 176 )
scale = Vector2( 0.765625, 0.765625 )
texture = ExtResource( 13 )

[node name="Arqueiro02" type="Sprite" parent="Areia"]
position = Vector2( 50, 958 )
scale = Vector2( 0.78125, 0.78125 )
texture = ExtResource( 14 )

[node name="Castelo" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Castelo"]
position = Vector2( 1003, 531 )
scale = Vector2( 0.955729, 1 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Castelo"]
position = Vector2( 95, 393 )
polygon = PoolVector2Array( -11, -393, -9, 13, 104, 14, 105, -223, 1777, -223, 1777, 472, 106, 474, 106, 248, -9, 248, -9, 593, -9, 687, 1827, 679, 1825, -396 )

[node name="Labirinto" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Labirinto"]
position = Vector2( 962, 531 )
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 404, 182 )
polygon = PoolVector2Array( -45, -11, -46, 102, -150, 103, -150, 154, -46, 154, -47, 256, 109, 258, 109, 205, 8, 206, 6, -11 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 590, 255 )
polygon = PoolVector2Array( -26, -23, -27, 184, 330, 185, 330, 81, 278, 81, 278, 132, 25, 132, 25, 30, 77, 30, 77, 81, 129, 81, 129, -24 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 901, 196 )
polygon = PoolVector2Array( -33, -25, -34, 88, 20, 88, 20, -26 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 993, 225 )
polygon = PoolVector2Array( -26, -54, -27, 215, 179, 216, 179, 163, 26, 163, 26, -54 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 1251, 231 )
polygon = PoolVector2Array( -30, -61, -30, 53, 22, 53, 21, -62 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 1249, 379 )
polygon = PoolVector2Array( -29, -43, 24, -43, 24, 10, 428, 10, 428, -92, 480, -92, 480, 10, 581, 10, 582, 61, -28, 61 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 1713, 187 )
polygon = PoolVector2Array( -37, -17, -37, 36, 16, 36, 16, -17 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 1793, 589 )
polygon = PoolVector2Array( 30, 119, 31, -35, 79, -34, 79, -87, -21, -86, -21, 119 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 1776, 790 )
polygon = PoolVector2Array( -5, -28, 48, -28, 47, 75, -3, 75 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 590, 535 )
polygon = PoolVector2Array( -80, 279, -78, 228, -181, 228, -181, 18, -29, 20, -28, 278, 23, 279, 23, 331, 74, 331, 74, 279, 177, 279, 175, 227, 24, 228, 24, -32, -233, -30, -234, 280 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 806, 526 )
polygon = PoolVector2Array( -146, -23, 924, -22, 924, 30, 416, 29, 418, 81, 365, 80, 366, 27, 114, 29, 112, 236, 316, 236, 316, 290, 10, 289, 10, 237, 61, 238, 61, 27, -145, 27 )

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Labirinto"]
position = Vector2( 1211, 726 )
polygon = PoolVector2Array( -40, -67, 11, -67, 12, -16, 166, -16, 166, -118, 422, -118, 422, -65, 218, -67, 217, 89, 166, 88, 166, 37, 13, 38, 12, 140, -41, 140 )

[node name="Lava" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Lava"]
position = Vector2( 255, 529 )
scale = Vector2( 0.0519313, 0.0519313 )
texture = ExtResource( 6 )

[node name="ColisaoLava01" type="CollisionPolygon2D" parent="Lava"]
position = Vector2( 204, 479 )
polygon = PoolVector2Array( -10, -10, -9, 110, 111, 110, 111, -10 )

[node name="Sprite2" type="Sprite" parent="Lava"]
position = Vector2( 732.882, 670.563 )
scale = Vector2( 0.0559431, 0.0495375 )
texture = ExtResource( 6 )

[node name="ColisaoLava02" type="CollisionShape2D" parent="Lava"]
position = Vector2( 733, 670.375 )
shape = SubResource( 3 )

[node name="Sprite3" type="Sprite" parent="Lava"]
position = Vector2( 767, 283.5 )
scale = Vector2( 0.0413081, 0.0451807 )
texture = ExtResource( 6 )

[node name="ColisaoLava03" type="CollisionShape2D" parent="Lava"]
position = Vector2( 767, 283.25 )
shape = SubResource( 4 )

[node name="Sprite4" type="Sprite" parent="Lava"]
position = Vector2( 1026.02, 667 )
scale = Vector2( 0.0490534, 0.0490534 )
texture = ExtResource( 6 )

[node name="ColisaoLava04" type="CollisionShape2D" parent="Lava"]
position = Vector2( 1026, 667 )
shape = SubResource( 5 )

[node name="Sprite5" type="Sprite" parent="Lava"]
position = Vector2( 1625.67, 337.672 )
scale = Vector2( 0.0436075, 0.0436075 )
texture = ExtResource( 6 )

[node name="ColisaoLava05" type="CollisionShape2D" parent="Lava"]
position = Vector2( 1626, 338.125 )
shape = SubResource( 6 )

[node name="Sprite6" type="Sprite" parent="Lava"]
position = Vector2( 1558.12, 735.875 )
scale = Vector2( 0.0655121, 0.0655121 )
texture = ExtResource( 6 )

[node name="ColisaoLava06" type="CollisionShape2D" parent="Lava"]
position = Vector2( 1558, 736.625 )
shape = SubResource( 7 )

[node name="Bruxa" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Bruxa"]
position = Vector2( 280.75, 255.25 )
scale = Vector2( 0.914062, 0.914062 )
texture = ExtResource( 8 )

[node name="ColisaoBruxa01" type="CollisionShape2D" parent="Bruxa"]
position = Vector2( 280.5, 256 )
shape = SubResource( 12 )

[node name="Sprite2" type="Sprite" parent="Bruxa"]
position = Vector2( 943.5, 412.5 )
scale = Vector2( 0.890625, 0.890625 )
texture = ExtResource( 8 )

[node name="ColisaoBruxa02" type="CollisionShape2D" parent="Bruxa"]
position = Vector2( 942.5, 412.75 )
shape = SubResource( 13 )

[node name="Sprite3" type="Sprite" parent="Bruxa"]
position = Vector2( 485, 676 )
texture = ExtResource( 8 )

[node name="ColisaoBruxa03" type="CollisionShape2D" parent="Bruxa"]
position = Vector2( 485.5, 676.5 )
shape = SubResource( 14 )

[node name="Sprite4" type="Sprite" parent="Bruxa"]
position = Vector2( 1143, 357 )
texture = ExtResource( 8 )

[node name="ColisaoBruxa04" type="CollisionShape2D" parent="Bruxa"]
position = Vector2( 1143.13, 356.5 )
shape = SubResource( 15 )

[node name="Sprite5" type="Sprite" parent="Bruxa"]
position = Vector2( 1345, 676 )
texture = ExtResource( 8 )

[node name="ColisaoBruxa05" type="CollisionShape2D" parent="Bruxa"]
position = Vector2( 1345.25, 676 )
shape = SubResource( 16 )

[node name="Sprite6" type="Sprite" parent="Bruxa"]
position = Vector2( 1763, 355 )
texture = ExtResource( 8 )

[node name="ColisaoBruxa06" type="CollisionShape2D" parent="Bruxa"]
position = Vector2( 1763.5, 356.25 )
shape = SubResource( 21 )

[node name="Abobora" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Abobora"]
position = Vector2( 331, 362 )
scale = Vector2( 0.410156, 0.410156 )
texture = ExtResource( 9 )

[node name="ColisaoAbobora01" type="CollisionShape2D" parent="Abobora"]
position = Vector2( 332, 362.5 )
shape = SubResource( 17 )

[node name="Sprite2" type="Sprite" parent="Abobora"]
position = Vector2( 696, 840 )
scale = Vector2( 0.457031, 0.457031 )
texture = ExtResource( 9 )

[node name="ColisaoAbobora02" type="CollisionShape2D" parent="Abobora"]
position = Vector2( 696.25, 839.75 )
shape = SubResource( 18 )

[node name="Sprite3" type="Sprite" parent="Abobora"]
position = Vector2( 453, 222 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
offset = Vector2( -22.0001, -32 )

[node name="ColisaoAbobora03" type="CollisionShape2D" parent="Abobora"]
position = Vector2( 443, 207.125 )
shape = SubResource( 22 )

[node name="Sprite4" type="Sprite" parent="Abobora"]
position = Vector2( 1424.5, 217.5 )
scale = Vector2( 0.632813, 0.632813 )
texture = ExtResource( 9 )

[node name="ColisaoAbobora04" type="CollisionShape2D" parent="Abobora"]
position = Vector2( 1424.5, 217.5 )
shape = SubResource( 23 )

[node name="Sprite5" type="Sprite" parent="Abobora"]
position = Vector2( 1740, 833 )
scale = Vector2( 0.53125, 0.53125 )
texture = ExtResource( 9 )

[node name="ColisaoAbobora05" type="CollisionShape2D" parent="Abobora"]
position = Vector2( 1742.88, 834.188 )
shape = SubResource( 24 )

[node name="Fantasma" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Fantasma"]
position = Vector2( 1662.94, 632.937 )
scale = Vector2( 0.438478, 0.438478 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fantasma"]
position = Vector2( 1663.5, 633 )
shape = SubResource( 19 )

[node name="Sprite2" type="Sprite" parent="Fantasma"]
position = Vector2( 228, 838 )
scale = Vector2( 0.421875, 0.421875 )
texture = ExtResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Fantasma"]
position = Vector2( 228.25, 835.5 )
shape = SubResource( 20 )

[node name="Coracao01" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Coracao01"]
position = Vector2( 332, 196 )
scale = Vector2( 0.206787, 0.206787 )
texture = ExtResource( 11 )

[node name="ColisaoCoracao01" type="CollisionShape2D" parent="Coracao01"]
position = Vector2( 332, 196 )
shape = SubResource( 10 )

[node name="Coracao02" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Coracao02"]
position = Vector2( 438, 582 )
scale = Vector2( 0.21875, 0.21875 )
texture = ExtResource( 11 )

[node name="ColisaoCoracao02" type="CollisionShape2D" parent="Coracao02"]
position = Vector2( 438.5, 582.5 )
shape = SubResource( 9 )

[node name="Coracao03" type="StaticBody2D" parent="."]
position = Vector2( 6, 59 )
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Coracao03"]
position = Vector2( 1294, 783 )
scale = Vector2( 0.19043, 0.19043 )
texture = ExtResource( 11 )

[node name="ColisaoCoracao03" type="CollisionShape2D" parent="Coracao03"]
position = Vector2( 1294.63, 783.625 )
shape = SubResource( 11 )

[node name="Personagem" type="KinematicBody2D" parent="."]
position = Vector2( 27, 120 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Personagem"]
position = Vector2( 32.5, 352.5 )
scale = Vector2( 0.765625, 0.765625 )
texture = ExtResource( 1 )

[node name="ColisaoPersonagem" type="CollisionPolygon2D" parent="Personagem"]
position = Vector2( 31, 353 )
polygon = PoolVector2Array( -13, 24, 16, 24, 17, 23, 19, 22, 20, 20, 20, 17, 19, 14, 17, 11, 14, 8, 12, 6, 12, 5, 15, 4, 16, 4, 16, 3, 15, 2, 13, 0, 11, -1, 12, -2, 14, -2, 15, -3, 16, -4, 16, -6, 15, -7, 14, -7, 14, -10, 15, -12, 15, -14, 19, -20, 19, -22, 11, -22, 8, -23, -3, -24, -5, -24, -6, -22, -7, -20, -13, -17, -12, -13, -12, -11, -11, -10, -11, -7, -12, -6, -13, -4, -12, -3, -11, -3, -9, -3, -8, -1, -9, 0, -12, 3, -8, 6, -13, 11, -16, 14, -17, 18, -17, 21, -15, 23 )

[node name="AreaPersonagem" type="Area2D" parent="Personagem"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Personagem/AreaPersonagem"]
position = Vector2( 26, 299 )
polygon = PoolVector2Array( -10, 78, 21, 78, 24, 76, 25, 73, 24, 69, 21, 64, 16, 60, 17, 59, 19, 58, 21, 57, 19, 55, 16, 53, 16, 51, 18, 52, 20, 51, 21, 50, 21, 48, 20, 47, 19, 47, 19, 43, 20, 40, 24, 34, 24, 32, 17, 32, 13, 31, 1, 29, -1, 31, -1, 33, -3, 35, -7, 37, -8, 38, -7, 42, -6, 43, -6, 46, -7, 48, -8, 49, -7, 51, -5, 52, -3, 52, -3, 53, -5, 54, -7, 55, -8, 57, -6, 58, -3, 60, -6, 63, -9, 66, -12, 69, -12, 72, -12, 75, -11, 77 )

[node name="Quadro" type="StaticBody2D" parent="."]
position = Vector2( -2, -2 )

[node name="Sprite" type="Sprite" parent="Quadro"]
position = Vector2( 123.759, 67.25 )
scale = Vector2( 1.62346, 1.62346 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quadro"]
position = Vector2( 125, 68 )
shape = SubResource( 40 )

[node name="Vida" type="Label" parent="."]
margin_left = 12.0
margin_top = 28.0
margin_right = 52.0
margin_bottom = 42.0

[node name="Placar" type="Label" parent="."]
margin_left = 11.0
margin_top = 56.0
margin_right = 51.0
margin_bottom = 70.0

[node name="Estrela01" type="StaticBody2D" parent="."]
position = Vector2( 1, 6 )
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela01"]
position = Vector2( 440, 353 )
scale = Vector2( 0.90625, 0.90625 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela01" type="CollisionShape2D" parent="Estrela01"]
position = Vector2( 440, 353.5 )
shape = SubResource( 25 )

[node name="Estrela02" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela02"]
position = Vector2( 641, 307 )
scale = Vector2( 0.78125, 0.78125 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela02" type="CollisionShape2D" parent="Estrela02"]
position = Vector2( 641, 307.625 )
shape = SubResource( 26 )

[node name="Estrela03" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela03"]
position = Vector2( 944.25, 215.75 )
scale = Vector2( 0.695312, 0.695312 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela03" type="CollisionShape2D" parent="Estrela03"]
position = Vector2( 944.25, 215 )
shape = SubResource( 27 )

[node name="Estrela04" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela04"]
position = Vector2( 1097, 247 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela04" type="CollisionShape2D" parent="Estrela04"]
position = Vector2( 1097, 245.5 )
shape = SubResource( 28 )

[node name="Estrela05" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela05"]
position = Vector2( 1531, 350 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela05" type="CollisionShape2D" parent="Estrela05"]
position = Vector2( 1531, 349.5 )
shape = SubResource( 29 )

[node name="Estrela06" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela06"]
position = Vector2( 1837, 203 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela06" type="CollisionShape2D" parent="Estrela06"]
position = Vector2( 1837, 203 )
shape = SubResource( 30 )

[node name="Estrela07" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela07"]
position = Vector2( 834, 586 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela07" type="CollisionShape2D" parent="Estrela07"]
position = Vector2( 834, 585.5 )
shape = SubResource( 31 )

[node name="Estrela08" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela08"]
position = Vector2( 1139, 832 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela08" type="CollisionShape2D" parent="Estrela08"]
position = Vector2( 1137, 832.5 )
shape = SubResource( 32 )

[node name="Estrela09" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela09"]
position = Vector2( 1266, 590 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela09" type="CollisionShape2D" parent="Estrela09"]
position = Vector2( 1267, 590.5 )
shape = SubResource( 33 )

[node name="Estrela10" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela10"]
position = Vector2( 1849, 576 )
scale = Vector2( 0.640625, 0.640625 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela10" type="CollisionShape2D" parent="Estrela10"]
position = Vector2( 1848.75, 576 )
shape = SubResource( 34 )

[node name="Estrela11" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela11"]
position = Vector2( 1848, 843 )
scale = Vector2( 0.664067, 0.664067 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela11" type="CollisionShape2D" parent="Estrela11"]
position = Vector2( 1848, 842.75 )
shape = SubResource( 35 )

[node name="Estrela12" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela12"]
position = Vector2( 1455, 685 )
scale = Vector2( 0.792969, 0.792969 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela12" type="CollisionShape2D" parent="Estrela12"]
position = Vector2( 1454.75, 684.75 )
shape = SubResource( 36 )

[node name="Estrela13" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela13"]
position = Vector2( 1322, 213 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela13" type="CollisionShape2D" parent="Estrela13"]
position = Vector2( 1322.5, 212 )
shape = SubResource( 37 )

[node name="Estrela14" type="StaticBody2D" parent="."]
position = Vector2( 0, -2 )
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela14"]
position = Vector2( 1256, 796 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela14" type="CollisionShape2D" parent="Estrela14"]
position = Vector2( 1256.5, 796.5 )
shape = SubResource( 38 )

[node name="Estrela15" type="StaticBody2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 4
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Estrela15"]
position = Vector2( 1344, 795 )
texture = ExtResource( 7 )

[node name="ColisaoEstrela15" type="CollisionShape2D" parent="Estrela15"]
position = Vector2( 1343.75, 795.25 )
shape = SubResource( 39 )

[node name="Tempo" type="Node2D" parent="."]
pause_mode = 2
script = SubResource( 41 )

[node name="Timer" type="Timer" parent="Tempo"]
autostart = true

[node name="Minutos" type="Label" parent="Tempo"]
margin_left = 62.0
margin_top = 83.0
margin_right = 78.0
margin_bottom = 97.0
text = "00"

[node name="Segundos" type="Label" parent="Tempo"]
margin_left = 79.0
margin_top = 83.0
margin_right = 97.0
margin_bottom = 97.0
text = "00"

[node name="Tempo" type="Label" parent="Tempo"]
margin_left = 11.0
margin_top = 83.0
margin_right = 59.0
margin_bottom = 97.0
text = "Tempo:"

[node name="TileMap" type="TileMap" parent="."]
format = 1

[connection signal="body_entered" from="Personagem/AreaPersonagem" to="Personagem" method="_on_AreaPersonagem_body_entered"]
[connection signal="body_exited" from="Personagem/AreaPersonagem" to="Personagem" method="_on_AreaPersonagem_body_exited"]
[connection signal="timeout" from="Tempo/Timer" to="Tempo" method="_on_Timer_timeout"]
